<resources>
    <string name="app_name">Meus Games</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="msg_error_login">Login é um campo obrigatório</string>
    <string name="msg_error_senha">Senha é um campo obrigatório</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="label_name">Nome</string>
    <string name="label_data_nascimento">Data de Nascimento</string>
    <string name="label_email">E-mail</string>
    <string name="label_horizontal">Endereço</string>
    <string name="label_senha">Senha</string>
    <string name="label_confirmar_senha">Confirme sua senha</string>
    <string name="label_salvar">Salvar</string>
    <string name="required_nome">Nome é obrigatório</string>
    <string name="required_data_nascimento">Data de Nascimento é obrigatório</string>
    <string name="required_email">Email é obrigatório</string>
    <string name="required_endereco">Endereço é obrigatório</string>
    <string name="required_senha">Senha é obrigatório</string>
    <string name="required_confirmacao_senha">Confirmar a senha é obrigatório</string>
    <string name="confirmacao_senha_errada">Confirmação de senha errada</string>
    <string name="label_favoritar">Favoritar</string>
    <string name="label_adicionar_biblioteca">Adicionar à Biblioteca</string>
    <string name="title_activity_games">Games</string>
    <string name="lbl_ano">Ano: %d</string>
    <string name="lbl_pontuacao">Pontuação: %.1f</string>
    <string name="lbl_categorias">Categorias: %s</string>
    <string name="title_activity_cadastro_game">Cadastro de Game</string>
    <string name="label.imagem">Imagem</string>
    <string name="mensagem_alert_origem_foto">Selecione a origem da imagem</string>
    <string name="label_galeria">Galeria</string>
    <string name="label_camera">Câmera</string>
    <string name="label_nome">Nome</string>
    <string name="label_descricao">Descrição</string>
    <string name="label_ano">Ano</string>
    <string name="label_pontuacao">Pontuação</string>
    <string name="label_siteoficial">Site Oficial</string>
    <string name="label_categorias">Categorias (separadas por vírgula)</string>
    <string name="label_plataformas">Plataformas (separadas por vírgula)</string>
    <string name="label_cancelar">Cancelar</string>
    <string name="hint_digite_email">Digite seu e-mail</string>
    <string name="hint_digite_senha">Digite sua senha</string>
    <string name="label_enviar">Enviar</string>
    <string name="msg_adicionado_favoritos">Adicionado aos favoritos</string>
    <string name="msg_erro_favoritar">Erro ao Favoritar</string>
    <string name="msg_erro_remover_favorito">Erro ao remover dos favoritos</string>
    <string name="msg_removido_favoritos">Removido dos favoritos</string>
    <string name="msg_erro_enviar_imagem_jogo">Erro ao enviar imagem do jogo</string>

    <string name="sender_id">207525968181</string>
    <string name="msg_notificacao_novo_game">Novo game cadastrado</string>
    <string name="title_activity_maps">Amigos</string>
    <string name="action_amigos">Amigos</string>
    <string name="title_activity_comentarios">Comentários</string>
    <string name="msg_deixe_seu_comentario">Deixe aqui o seu comentário...</string>
</resources>
