<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.cocobongo.meusgames.CadastroGameActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/cadastro_game_imagem"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/anon_user"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/cadastro_game_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/label_nome"
                android:singleLine="true"
                android:maxLength="100"/>

            <EditText
                android:id="@+id/cadastro_game_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_descricao"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:maxLines="2"/>

            <EditText
                android:id="@+id/cadastro_game_ano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_ano"
                android:inputType="number"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <EditText
                android:id="@+id/cadastro_game_pontuacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_pontuacao"
                android:inputType="numberDecimal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <EditText
                android:id="@+id/cadastro_game_siteoficial"
                android:layout_width="match_parent"
                android:hint="@string/label_siteoficial"
                android:inputType="textUri"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/cadastro_game_categorias"
                android:layout_width="match_parent"
                android:hint="@string/label_categorias"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/cadastro_game_plataformas"
                android:layout_width="match_parent"
                android:hint="@string/label_plataformas"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:singleLine="true"/>

            <Button
                android:id="@+id/cadastro_game_salvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/label_salvar"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
